--- a/main.css
+++ b/main.css
@@ -1,24 +1,9 @@
+/*General*/
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
-.container{
-    max-width: 1000px;
-    margin: 0 auto;
-}
-div.row:after{
-    content: '';
-    display: block;
-    clear: both;
-}
-section{
-    float: left;
-    width: 75%;
-}
-aside{
-    float: left;
-    width: 25%;
 }
 h1{
     font-size: 2em;
@@ -28,3 +13,107 @@ ul{
     padding: 0;
     list-style-type: none;
 }
+/*Header*/
+
+header{
+    width: 100%;
+    background: url("src/Alien_Ink_2560X1600_Abstract_Background_1.jpg")  no-repeat 80% bottom;
+    text-align: center;
+    padding: 30px 20px;
+}
+header h1{
+    font-size: 50px;
+    margin-bottom: 10px;
+}
+/*Navigation*/
+
+nav{
+    background: #e9e9e9;
+
+}
+nav:after{
+    content: '';
+    display: block;
+    clear: both;
+}
+nav li{
+    float: left;
+    position: relative;
+    background: #e9e9e9
+}
+li.active a{
+    background: #008ae6;
+    color: white;
+}
+nav a:hover{
+background: #66c2ff;
+color: white;
+}
+nav a{
+    font-family: Arial;
+    display: block;
+    padding: 8px 16px;
+    text-decoration: none;
+    font-size: 20px;
+    color: #333333;
+}
+nav span{
+    padding-left: 4px;
+}
+.fa-caret-right{
+    display: inline-block;
+    position: relative;
+    bottom: 8px;
+    left: 6px;
+
+}
+.hidden {
+    display: none;
+    position: absolute;
+}
+.hidden li{
+    width: 100%;
+
+}
+.hidden li:first-child{
+    margin-top: 3px;
+}
+.hidden li .side-nav{
+    position: absolute;
+    left: 94px;
+    top: -3px;
+    border: 5px solid transparent;
+}
+nav li:last-child:hover>ul{
+    display: block;
+}
+
+
+nav form{
+    float: right;
+}
+
+
+/*Main*/
+
+.container{
+    max-width: 1200px;
+    margin: 0 auto;
+
+}
+div.row:after{
+    content: '';
+    display: block;
+    clear: both;
+}
+section{
+    float: left;
+    width: 75%;
+    padding: 20px 10px;
+}
+aside{
+    float: left;
+    width: 25%;
+    padding: 20px 10px;
+}
+/*Footer*/
