--- a/main.css
+++ b/main.css
@@ -29,6 +29,8 @@ header h1{
 
 nav{
     background: #e9e9e9;
+    position: sticky;
+    top: 0;
 
 }
 nav:after{
@@ -52,7 +54,7 @@ color: white;
 nav a{
     font-family: Arial;
     display: block;
-    padding: 8px 16px;
+    padding: 10px 16px;
     text-decoration: none;
     font-size: 20px;
     color: #333333;
@@ -89,8 +91,48 @@ nav li:last-child:hover>ul{
 }
 
 
-nav form{
+nav>form, nav>form>button{
     float: right;
+
+}
+
+nav>form>input{
+    padding: 6px;
+    font-size: 18px;
+    margin-top: 4px;
+    border: 1px solid #ccc;
+
+}
+nav>form>input:focus{
+    outline: none;
+    border: 1px solid #008ae6;
+}
+nav>form>.fa{
+    margin-top: 4px;
+    font-size: 25px;
+    padding: 5px 10px;
+    color: #333333;
+    border: none;
+    background: #e9e9e9;
+    display: block;
+
+}
+nav>form>button:hover{
+    background: #cccccc;
+}
+
+
+@media screen and (max-width: 600px) {
+    nav>ul li, nav>form, nav>form>.fa{
+        float: none;
+        display: block;
+        width: 100%;
+        margin-top: 0;
+
+    }
+    nav>form>input{
+        width: 100%;
+    }
 }
 
 
