--- a/main.css
+++ b/main.css
@@ -62,6 +62,7 @@ nav a{
 nav span{
     padding-left: 4px;
 }
+/* zrob potem w javaScript zeby przy szerokosci max 600px zamienic klase .fa-caret-right na .fa-caret-down*/
 .fa-caret-right{
     display: inline-block;
     position: relative;
@@ -115,6 +116,7 @@ nav>form>.fa{
     border: none;
     background: #e9e9e9;
     display: block;
+    cursor: pointer;
 
 }
 nav>form>button:hover{
@@ -126,12 +128,12 @@ nav>form>button:hover{
     nav>ul li, nav>form, nav>form>.fa{
         float: none;
         display: block;
-        width: 100%;
+        /*width: 100%;*/
         margin-top: 0;
 
     }
     nav>form>input{
-        width: 100%;
+        /*width: 100%;*/
     }
 }
 
