--- a/main.css
+++ b/main.css
@@ -91,8 +91,8 @@ nav span{
 }
 .side-nav{
     position: absolute;
-    left: 94px;
-    top: -3px;
+    left: 90px;
+    top: -7px;
     border: 5px solid transparent;
 }
 nav li:last-child:hover>ul{
@@ -150,11 +150,11 @@ nav>form>button:hover{
         width: 100%;
     }
     nav>ul>li>ul.hidden{
-        position: relative;
+        position: absolute;
         width: 100%;
     }
     .side-nav{
-        position: relative;
+        position: absolute;
         top: 0;
         left: 0;
         width: 100%;
@@ -179,11 +179,11 @@ div.row:after{
 }
 section{
     float: left;
-    width: 75%;
+    width: 70%;
 }
 aside{
     float: left;
-    width: 25%;
+    width: 30%;
     padding: 20px 10px;
 }
 .img-container{
@@ -220,7 +220,7 @@ article a:active{
     box-shadow: 0 1px 3px #cccccc;
     transform: translateY(3px);
 }
-.container h1, .container h3{
+.container section h1, .container section h3{
     margin: 20px 0;
     color: white;
 }
@@ -237,11 +237,45 @@ article a:active{
     border-radius: 4px;
 }
 
+.aside-container{
+    text-align: center;
+    background: #f2f2f2;
+    margin: 140px 0 0 3px;
+    padding-top: 20px;
+}
+.aside-container h3{
+    text-align: left;
+    margin-left: 10%;
+}
+.aside-article:hover{
+    background: #e6e6e6;
+}
+.aside-article>div{
+    width: 80%;
+    margin: 20px auto;
+    min-width: 150px;
+
+
+}
+.aside-article>div>img{
+    width: 100%;
+    height: auto;
+}
 @media screen and (max-width: 1024px){
     section, aside{
         width: 100%;
     }
+    .aside-container{
+        margin: 30px 0 0 0;
+    }
+    .aside-container h3{
+        text-align: center;
+        margin-left: 0;
+    }
 }
+
+
+
 /*Footer*/
 footer{
     background: #cccccc;
