--- a/main.css
+++ b/main.css
@@ -143,7 +143,7 @@ nav>form>button:hover{
     }
     nav>form>input{
         width: 244px;
-        -webkit-transition: width 0.6s ;
+        -webkit-transition: width 2s ;
         transition: width 2s;
     }
     nav>form>input:focus{
@@ -167,22 +167,89 @@ nav>form>button:hover{
 .slide-show{
     width: 100%;
     text-align: center;
-    position: relative;
+    border-radius: 4px;
+    background: #f6f6f6;
+    margin-bottom: 4px;
 
+}
+
+.slide-show img{
+    border-radius: 4px;
 }
 .slide{
     width: 90%;
     height: auto;
-    margin: 20px auto;
+    margin: 0 auto;
+    padding: 20px 0 10px;
     display: none;
+    position: relative;
+
 }
 .circle{
     display: inline-block;
-    width: 15px;
-    height: 15px;
-    background: #333333;
+    width: 20px;
+    height: 20px;
+    background: #aaaaaa;
     margin: 0 2px;
     border-radius: 50%;
+    cursor: pointer;
+    -webkit-transition: 0.6s ease;
+    transition: 0.6s ease;
+
+}
+
+.number, .caption{
+    color: white;
+    position: absolute;
+    font-family:Arial;
+    font-size: 16px;
+}
+.number{
+    top: 22px;
+    left: 3px;
+}
+.caption{
+    bottom: 30px;
+    width: 100%;
+}
+
+.prev-button, .next-button{
+    text-decoration: none;
+    color: white;
+    position: absolute;
+    top: 50%;
+    font-size: 30px;
+    padding: 10px 16px;
+    font-weight: bold;
+    transform: translateY(-50%);
+    border-radius:4px 0 0 4px;
+    -webkit-transition: 0.6s ease;
+    transition: 0.6s ease;
+
+}
+
+@media screen and (max-width: 600px){
+    .prev-button, .next-button{
+        font-size: 14px;
+        padding: 8px 14px;
+    }
+}
+
+
+.prev-button:hover, .next-button:hover{
+    background: rgba(180,180,180, 0.5);
+}
+.prev-button{
+    left: 2%;
+
+}
+.next-button{
+    right: 2%;
+    border-radius: 0 4px 4px 0;
+}
+
+div.circles>span.active, div.circles>span:hover{
+    background: #808080;
 }
 
 /*Main*/
@@ -267,7 +334,7 @@ article a:active, .aside-button:active{
 .aside-container{
     text-align: center;
     background: #f2f2f2;
-    margin: 140px 0 0 3px;
+    margin: 10px 0 0 3px;
 }
 .aside-container h3{
     text-align: left;
