--- a/main.css
+++ b/main.css
@@ -37,6 +37,7 @@ nav{
     background: #e9e9e9;
     position: sticky;
     top: 0;
+    z-index: 2;
 
 }
 nav:after{
@@ -180,7 +181,7 @@ nav>form>button:hover{
     width: 90%;
     height: auto;
     margin: 0 auto;
-    padding: 20px 0 10px;
+    padding: 100px 0 10px;
     display: none;
     position: relative;
 
