--- a/main.css
+++ b/main.css
@@ -79,28 +79,33 @@ nav span{
 
 }
 .hidden {
-    display: none;
     position: absolute;
+    overflow: hidden;
+    max-height: 0;
+
+
 }
+ul.visible{
+    overflow: visible;
+    max-height: 400px;
+}
+
 .hidden li{
-    width: 100%;
+width: 100%;
 
 }
 .hidden li:first-child{
-    margin-top: 3px;
+margin-top: 3px;
 }
 .side-nav{
-    position: absolute;
-    left: 98px;
-    top: -7px;
-    border: 5px solid transparent;
+position: absolute;
+left: 98px;
+top: -7px;
+border: 5px solid transparent;
 }
 /*nav li:last-child:hover>ul{*/
-    /*display: block;*/
+/*display: block;*/
 /*}*/
-ul.visible{
-    display: block;
-}
 
 
 nav>form, nav>form>button{
@@ -139,6 +144,12 @@ nav>form>button:hover{
     nav > ul{
         width: 100%;
     }
+    .side-nav, nav>ul>li>ul.hidden{
+        width: 100%;
+        top: initial;
+        left: 0;
+        border: 0;
+    }
 
     nav li{
         width: 33%;
@@ -150,6 +161,7 @@ nav>form>button:hover{
     nav > ul > li{
         margin-bottom: 5px;
     }
+
 
     nav>form, nav>form>.fa{
         float: none;
@@ -183,13 +195,12 @@ nav>form>button:hover{
     }
     nav>ul>li>ul.hidden{
         position: relative;
-        width: 100%;
+
     }
     .side-nav{
         position: relative;
         top: 0;
         left: 0;
-        width: 100%;
     }
     .side-nav li{
         width: 100%;
