--- a/main.css
+++ b/main.css
@@ -80,29 +80,31 @@ nav span{
 }
 .hidden{
     position: absolute;
-    display: none;
-    height: 0;
-    overflow: hidden;
-    transition: height 350ms ease-in-out;
+    /*overflow: hidden;*/
+    /*display: none;*/
+    /*height: 0;*/
+    transition: height 250ms ease-in-out;
 }
 ul.visible {
-    display: block;
-    height: auto;
+    /*display: block;*/
+    /*height: auto;*/
     /*overflow: visible;*/
 }
 
 .hidden li{
-width: 100%;
+    width: 100%;
 
 }
 .hidden li:first-child{
-margin-top: 3px;
+    margin-top: 3px;
 }
 .side-nav{
-position: absolute;
-left: 98px;
-top: -7px;
-border: 5px solid transparent;
+    position: absolute;
+    left: 98px;
+    top: -7px;
+    border: 5px solid transparent;
+    overflow: hidden;
+
 }
 /*nav li:last-child:hover>ul{*/
 /*display: block;*/
